# cbak

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
client/: Cargo.toml
client/src/: config.rs  main.rs
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs
debian/: service
src/: config.rs  main.rs
