[package]
name = "cbakd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
fancy-regex = "0.10.0"
interprocess = "1.1.1"
rayon = "1.5.3"
serde = { version = "1.0.145", features = ["serde_derive"] }
toml = "0.5.9"
